--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<!--The viewport meta tag is used to improve the presentation and behavior of the samples
 	on iOS devices-->
-	<!--meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no"/ -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="apple-mobile-web-app-capable" content="yes">
@@ -15,9 +14,15 @@
 </head>
 
 <body>
-	<div id="card">
-		<div id="date">Jan 15, 2013</div>
-		<div id="julian">149</div>
+	<div class="card">
+		<div id="date"></div>
+		<div id="julian"></div>
+		<div id="info">( i )</div>
+	</div>
+	
+	<div class="info card hide">
+		This is explanatory text about what the hell this site is.
+		<div id="close">( x )</div>
 	</div>
 
 	<script src="julian.js" type="text/javascript"></script>
