--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<!--The viewport meta tag is used to improve the presentation and behavior of the samples
 	on iOS devices-->
+	<!--meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/-->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-
+	
+	<title>Julian Date</title>
 	
 	<link href="page.css" rel="stylesheet" type="text/css" />
 </head>
