--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 	<div class="card">
 		<div id="date"></div>
 		<div id="julian"></div>
+		<div>
+			<input type="date" id="dateInput" />
+		</div>
 		<div id="info">( i )</div>
 	</div>
 	
