--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<div>
 			<input type="date" id="dateInput" />
 		</div>
+		<div id="today" class="hide">( today )</div>
 		<div id="info">( i )</div>
 	</div>
 	
