added info text

--- a/index.html
+++ b/index.html
@@ -26,7 +26,17 @@
 	</div>
 	
 	<div class="info card hide">
-		This is explanatory text about what the hell this site is.
+		<div class="text">
+		When buying eggs, the date in which the eggs were collected is displayed on the package.
+		However, instead of a regularly formatted date, it is displayed as the number of days from
+		the beginning of the year. For example, January 1st is 1, February 1st is 32, and so on.
+		<br/><br/>
+		This simple calculator helps you determine the freshness of your eggs before you buy them, 
+		by telling you today's day number. If today is 161, and your eggs were collected on 158, 
+		they are 3 days old.
+		<br/><br/>
+		Cheers!
+		</div>
 		<div id="close">( x )</div>
 	</div>
 
