added custom julian selection
plus bug fixes

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<div id="date"></div>
 		<div id="julian"></div>
 		<input type="date" id="dateInput" />
+		<input type="number" id="julianInput" minimum="1" maximum="366" />
 		<div id="today" class="hide">( today )</div>
 		<div id="info">( i )</div>
 	</div>
