added more explanation

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 		by telling you today's day number. If today is 161, and your eggs were collected on 158, 
 		they are 3 days old.
 		<br/><br/>
+		You can click on the date or the number, respectively, to change them to any value.
+		<br/><br/>
 		Cheers!
 		</div>
 		<div id="close">( x )</div>
