--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 	<title>Julian Date</title>
 	
 	<link href="page.css" rel="stylesheet" type="text/css" />
+	
+	<!--link rel="shortcut icon" href="favicon.ico" /--> 
+	<link rel="icon" type="image/png" href="favicon.png" />
+	<!--icon attribution: Irene Hoffman, from The Noun Project, icon-No14556 -->
 </head>
 
 <body>
