--- a/index.html
+++ b/index.html
@@ -50,5 +50,6 @@
 	<div id="footer">Created by <a href="https://github.com/catdad">catdad</a>. Find it on <a href="https://github.com/catdad/JulianDate">GitHub</a>.<div>
 	
 	<script src="julian.js" type="text/javascript"></script>
+	<script src="analytics.js" type="text/javascript"></script>
 </body>
 </html>
