now with offline mode

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="cache.manifest">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<!--The viewport meta tag is used to improve the presentation and behavior of the samples
@@ -45,6 +45,10 @@
 		Cheers!
 		</div>
 		<div id="close">( x )</div>
+	</div>
+	
+	<div class="cache card hide">
+		Now running in offline mode.
 	</div>
 
 	<div id="footer">Created by <a href="https://github.com/catdad">catdad</a>. Find it on <a href="https://github.com/catdad/JulianDate">GitHub</a>.<div>
