mobile chrome webapp capabilities

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
 	<!--meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/-->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+	<!-- Apple web app tags -->
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+	
+	<!-- vendor neutral web app tags -->
+	<meta name="mobile-web-app-capable" content="yes">
 	
 	<title>Julian Date</title>
 	
@@ -16,6 +20,8 @@
 	
 	<!--link rel="shortcut icon" href="favicon.ico" /--> 
 	<link rel="icon" type="image/png" href="favicon.png" />
+	<link rel="shortcut icon" sizes="196x196" href="favicon.png">
+	<link rel="apple-touch-icon" sizes="129x129" href="favicon.png">
 	<!--icon attribution: Irene Hoffman, from The Noun Project, icon-No14556 -->
 </head>
 
