updated android icon

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 	
 	<!--link rel="shortcut icon" href="favicon.ico" /--> 
 	<link rel="icon" type="image/png" href="favicon.png" />
-	<link rel="shortcut icon" sizes="196x196" href="favicon.png">
-	<link rel="apple-touch-icon" sizes="129x129" href="favicon.png">
+	<link rel="shortcut icon" href="fav-android.png">
+	<link rel="apple-touch-icon" href="favicon.png">
 	<!--icon attribution: Irene Hoffman, from The Noun Project, icon-No14556 -->
 </head>
 
