keeping it simple

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 	<link href="page.css" rel="stylesheet" type="text/css" />
 	
 	<!--link rel="shortcut icon" href="favicon.ico" /--> 
-	<link rel="shortcut icon" href="fav-android.png">
-	<link rel="apple-touch-icon" href="favicon.png">
+	<link rel="apple-touch-icon" sizes="196x196" href="favicon.png">
 	<link rel="icon" type="image/png" href="favicon.png" />
+	<link rel="shortcut icon" sizes="196x196" href="favicon.png">
 	<!--icon attribution: Irene Hoffman, from The Noun Project, icon-No14556 -->
 </head>
 
