--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 	<!-- vendor neutral web app tags -->
 	<meta name="mobile-web-app-capable" content="yes">
+	<link rel="manifest" href="manifest.json">
 	
 	<title>Julian Date</title>
 	
@@ -18,7 +19,7 @@
 	<!--link rel="shortcut icon" href="favicon.ico" /--> 
 	<link rel="apple-touch-icon" sizes="196x196" href="favicon.png">
 	<link rel="icon" type="image/png" href="favicon.png" />
-	<link rel="shortcut icon" sizes="196x196" href="favicon.png">
+	<link rel="shortcut icon" sizes="196x196" href="icons/icon196.png">
 	<!--icon attribution: Irene Hoffman, from The Noun Project, icon-No14556 -->
 </head>
 
