more favicon updates

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 	<link href="page.css" rel="stylesheet" type="text/css" />
 	
 	<!--link rel="shortcut icon" href="favicon.ico" /--> 
-	<link rel="apple-touch-icon" sizes="196x196" href="favicon.png">
-	<link rel="icon" type="image/png" href="favicon.png" />
-	<link rel="shortcut icon" sizes="196x196" href="icons/icon196.png">
+	<link rel="apple-touch-icon" sizes="192x192" href="icons/icon192.png">
+	<link rel="icon" sizes="192x192" href="icons/icon192.png">
 	<!--icon attribution: Irene Hoffman, from The Noun Project, icon-No14556 -->
 </head>
 
