--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 	<!-- vendor neutral web app tags -->
 	<meta name="mobile-web-app-capable" content="yes">
+	<meta name="theme-color" content="#f2f2f2">
+	
 	<link rel="manifest" href="manifest.json">
 	
 	<title>Julian Date</title>
