optimizing date input lag on Android

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <body>
 	
 	<div class="card">
-		<input type="date" id="dateInput" />
-		<input type="text" id="julianInput" minimum="1" maximum="366" />
+		<input type="date" id="dateInput" min="2001-01-01" max="2030-01-01" />
+		<input type="tel" id="julianInput" minimum="1" maximum="366" pattern="\d*" />
 		<div id="today" class="hide">( today )</div>
 	</div>
 	
